# web-rust

./: .gitignore  Cargo.toml  README.md
lpt/: one-client-few-requests
scripts/: setup_prometheus.sh
src/: lib.rs  main.rs
